[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h3xrecon"
dynamic = ["version"]
description = 'All in One Bug Bounty Reconnaissance Automation System'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "h3xit", email = "h3xit@protonmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "asyncio==3.4.3",
    "loguru==0.7.2",
    "jsondiff==2.2.1",
    "dnspython==2.7.0",
    "asyncpg==0.30.0",
    "nats-py==2.9.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "redis==5.2.0",
    "six==1.16.0",
    "tabulate==0.9.0",
    "docopt==0.6.2",
    "pydantic==2.10.3",
    "pydantic_core==2.27.1",
    "ipwhois==1.3.0",
    "requests==2.32.3",
    "psutil==6.0.0"
]

[project.urls]
Documentation = "https://github.com/h3xit/h3xrecon#readme"
Issues = "https://github.com/h3xit/h3xrecon/issues"
Source = "https://github.com/h3xit/h3xrecon"

[tool.hatch.version]
path = "src/h3xrecon/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/h3xrecon tests}"

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--showlocals",
    "--cov=h3xrecon",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["h3xrecon"]
branch = true
parallel = true
omit = [
    "src/h3xrecon/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "no cov",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",    
]

[project.scripts]
h3xrecon-dataprocessor = "h3xrecon.server.dataprocessor:run"
h3xrecon-jobprocessor = "h3xrecon.server.jobprocessor:run"
h3xrecon-worker = "h3xrecon.worker.worker:run"
h3xrecon-client = "h3xrecon.client.client:main"

[tool.coverage.paths]
h3xrecon = ["src/h3xrecon", "*/h3xrecon/src/h3xrecon"]
tests = ["tests", "*/h3xrecon/tests"]
